--- a/index.html
+++ b/index.html
@@ -83,6 +83,18 @@
         <td>27.10.2025</td>
         <td>x86</td>
       </tr>
+      <tr>
+        <td><a href="uuidgen" download>uuidgen</a></td>
+        <td>1.0-1</td>
+        <td>27.10.2025</td>
+        <td>x86_64</td>
+      </tr>
+      <tr>
+        <td><a href="netinf" download>netinf</a></td>
+        <td>1.0-1</td>
+        <td>27.10.2025</td>
+        <td>x86_64</td>
+      </tr>
     </tbody>
   </table>
 </main>
