--- a/index.html
+++ b/index.html
@@ -94,6 +94,16 @@
         <td>1.0-1</td>
         <td>27.10.2025</td>
         <td>x86_64</td>
+      <tr>
+        <td><a href="apc-static" download>apc</a></td>
+        <td>1.0-2</td>
+        <td>28.10.2025</td>
+        <td>x86_64</td>
+      <tr>
+        <td><a href="apc-static32" download>apc32</a></td>
+        <td>1.0-2</td>
+        <td>28.10.2025</td>
+        <td>x86</td>
       </tr>
     </tbody>
   </table>
