--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@
         <td>27.10.2025</td>
         <td>x86_64</td>
       <tr>
-        <td><a href="apc-static" download>apc</a></td>
+        <td><a href="apc" download>apc-static</a></td>
         <td>1.0-2</td>
         <td>28.10.2025</td>
         <td>x86_64</td>
       <tr>
-        <td><a href="apc-static32" download>apc32</a></td>
+        <td><a href="apc32" download>apc-static32</a></td>
         <td>1.0-2</td>
         <td>28.10.2025</td>
         <td>x86</td>
