--- a/index.html
+++ b/index.html
@@ -104,6 +104,11 @@
         <td>1.0-2</td>
         <td>28.10.2025</td>
         <td>x86</td>
+      <tr>
+        <td><a href="aurihelp" download>aurihelp</a></td>
+        <td>1.0-1</td>
+        <td>28.10.2025</td>
+        <td>x86-64</td>
       </tr>
     </tbody>
   </table>
