repo: New package: aurifirm!

--- a/index.html
+++ b/index.html
@@ -145,6 +145,11 @@
         <td>1.0-1</td>
         <td>29.10.2025</td>
         <td>x86_64</td>
+      <tr>
+        <td><a href="aurifirm" download>aurifirm</a></td>
+        <td>1.0-1</td>
+        <td>29.10.2025</td>
+        <td>x86_64</td>
       </tr>
     </tbody>
   </table>
