--- a/index.html
+++ b/index.html
@@ -2,170 +2,69 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>APC - AuriLinux Packet Manager</title>
+<title>AFR - Auri Firmware Repo</title>
 <style>
-  body {
-    font-family: monospace;
-    background-color: #121212;
-    color: #ffffff;
-    margin: 0;
-    padding: 0;
-  }
-  header {
-    background-color: #1f1f1f;
-    color: #ffffff;
-    padding: 10px 20px;
-  }
-  header h1 {
-    margin: 0;
-    font-size: 24px;
-  }
-  header small {
-    font-size: 12px;
-    color: #aaaaaa;
-  }
-  main {
-    padding: 20px;
-  }
-  .controls {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    gap: 10px;
-  }
-  select {
-    background-color: #1f1f1f;
-    color: #00ffff;
-    border: 1px solid #00ffff;
-    padding: 5px;
-    border-radius: 4px;
-    font-family: monospace;
-  }
-  table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 15px;
-  }
-  th, td {
-    border: 1px solid #ffffff;
-    padding: 8px;
-    text-align: left;
-  }
-  th {
-    background-color: #2a2a2a;
-  }
-  tr:nth-child(even) {
-    background-color: #1b1b1b;
-  }
-  tr:hover {
-    background-color: #333333;
-  }
-  a {
-    color: #00ffff;
-    text-decoration: none;
-  }
-  a:hover {
-    text-decoration: underline;
-  }
+    body {
+        background-color: #121212;
+        color: #e0e0e0;
+        font-family: monospace;
+        margin: 0;
+        padding: 0;
+    }
+    header {
+        background-color: #000000;
+        padding: 15px 20px;
+        font-size: 24px;
+        font-weight: bold;
+        text-align: left;
+    }
+    main {
+        padding: 20px;
+    }
+    table {
+        width: 100%;
+        border-collapse: collapse;
+        margin-top: 20px;
+    }
+    th, td {
+        text-align: left;
+        padding: 10px;
+        border-bottom: 1px solid #333;
+    }
+    th {
+        background-color: #1f1f1f;
+    }
+    a {
+        color: #80cbc4;
+        text-decoration: none;
+    }
+    a:hover {
+        text-decoration: underline;
+    }
 </style>
 </head>
 <body>
-<header>
-  <h1>APC <small>AuriLinux Packet Manager</small></h1>
-</header>
+<header>AFR - Auri Firmware Repo</header>
 <main>
-  <div class="controls">
-    <label for="archFilter">Sort by arch:</label>
-    <select id="archFilter">
-      <option value="all">All</option>
-      <option value="x86_64">x86_64</option>
-      <option value="x86">x86</option>
-    </select>
-  </div>
-  <h2>List of packages down here</h2>
-  <table id="packageTable">
-    <thead>
-      <tr>
-        <th>Package name</th>
-        <th>Version</th>
-        <th>Release date</th>
-        <th>Arch</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td><a href="triplefetch" download>triplefetch</a></td>
-        <td>1.1-1</td>
-        <td>26.10.2025</td>
-        <td>x86_64</td>
-      </tr>
-      <tr>
-        <td><a href="triplefetch32" download>triplefetch32</a></td>
-        <td>1.1-1</td>
-        <td>27.10.2025</td>
-        <td>x86</td>
-      </tr>
-      <tr>
-        <td><a href="uuidgen" download>uuidgen</a></td>
-        <td>1.0-1</td>
-        <td>27.10.2025</td>
-        <td>x86_64</td>
-      </tr>
-      <tr>
-        <td><a href="netinf" download>netinf</a></td>
-        <td>1.0-1</td>
-        <td>27.10.2025</td>
-        <td>x86_64</td>
-      </tr>
-      <tr>
-        <td><a href="apc" download>apc-static</a></td>
-        <td>1.1-0</td>
-        <td>28.10.2025</td>
-        <td>x86_64</td>
-      </tr>
-      <tr>
-        <td><a href="apc32" download>apc-static32</a></td>
-        <td>1.1-0</td>
-        <td>28.10.2025</td>
-        <td>x86</td>
-      </tr>
-      <tr>
-        <td><a href="aurihelp" download>aurihelp</a></td>
-        <td>1.0-1</td>
-        <td>28.10.2025</td>
-        <td>x86_64</td>
-      </tr>
-      <tr>
-        <td><a href="aurihelp32" download>aurihelp32</a></td>
-        <td>1.0-1</td>
-        <td>29.10.2025</td>
-        <td>x86</td>
-      <tr>
-        <td><a href="trextra" download>trextra</a></td>
-        <td>1.0-1</td>
-        <td>29.10.2025</td>
-        <td>x86_64</td>
-      <tr>
-        <td><a href="aurifirm" download>aurifirm</a></td>
-        <td>1.0-1</td>
-        <td>29.10.2025</td>
-        <td>x86_64</td>
-      </tr>
-    </tbody>
-  </table>
+<h2>Index of /aurifirm/</h2>
+<table>
+    <tr>
+        <th>FILE</th>
+        <th>VERSION</th>
+        <th>SIZE</th>
+    </tr>
+    <tr>
+        <td><a href="nrf54lm.ko" download>nrf54lm.ko</a></td>
+        <td>v29102025</td>
+        <td>384,3 KB</td>
+    </tr>
+    <tr>
+        <td><a href="mt6625.ko" download>mt6625.ko</a></td>
+        <td>v29102025</td>
+        <td>580,8 KB</td>
+    </tr>
+    <tr>
+</table>
 </main>
-
-<script>
-  const filter = document.getElementById('archFilter');
-  const rows = document.querySelectorAll('#packageTable tbody tr');
-
-  filter.addEventListener('change', () => {
-    const val = filter.value;
-    rows.forEach(row => {
-      const arch = row.cells[3].textContent.trim();
-      row.style.display = (val === 'all' || arch === val) ? '' : 'none';
-    });
-  });
-</script>
 </body>
 </html>
