repo: New package: repo!
Google repo v2.54

--- a/index.html
+++ b/index.html
@@ -151,6 +151,12 @@
         <td>29.10.2025</td>
         <td>x86_64</td>
       </tr>
+      <tr>
+        <td><a href="repo" download>repo</a></td>
+        <td>2.54-1</td>
+        <td>30.10.2025</td>
+        <td>universal</td>
+      </tr>
     </tbody>
   </table>
 </main>
