repo: Update aurifirm, New packages: aurifirm-mediatek, aurifirm-nordic!

--- a/index.html
+++ b/index.html
@@ -148,7 +148,19 @@
       <tr>
         <td><a href="aurifirm" download>aurifirm</a></td>
         <td>1.0-1</td>
-        <td>29.10.2025</td>
+        <td>30.10.2025</td>
+        <td>x86_64</td>
+      </tr>
+      <tr>
+        <td><a href="aurifirm-mediatek" download>aurifirm-mediatek</a></td>
+        <td>1.0-1</td>
+        <td>30.10.2025</td>
+        <td>x86_64</td>
+      </tr>
+      <tr>
+        <td><a href="aurifirm-nordic" download>aurifirm-nordic</a></td>
+        <td>1.0-1</td>
+        <td>30.10.2025</td>
         <td>x86_64</td>
       </tr>
       <tr>
