repo: Update aurifirm** packages, new package: aurifirm-broadcom!

--- a/index.html
+++ b/index.html
@@ -164,6 +164,12 @@
         <td>x86_64</td>
       </tr>
       <tr>
+        <td><a href="aurifirm-broadcom" download>aurifirm-broadcom</a></td>
+        <td>1.0-1</td>
+        <td>30.10.2025</td>
+        <td>x86_64</td>
+      </tr>
+      <tr>
         <td><a href="repo" download>repo</a></td>
         <td>2.54-1</td>
         <td>30.10.2025</td>
