frontend: change the name of "list of p..." and added new sortby

--- a/index.html
+++ b/index.html
@@ -80,9 +80,10 @@
       <option value="all">All</option>
       <option value="x86_64">x86_64</option>
       <option value="x86">x86</option>
+      <option value="universal">universal</option>
     </select>
   </div>
-  <h2>List of packages down here</h2>
+  <h2>index of /apc/</h2>
   <table id="packageTable">
     <thead>
       <tr>
