--- a/index.html
+++ b/index.html
@@ -80,10 +80,9 @@
       <option value="all">All</option>
       <option value="x86_64">x86_64</option>
       <option value="x86">x86</option>
-      <option value="universal">universal</option>
     </select>
   </div>
-  <h2>index of /apc/</h2>
+  <h2>List of packages down here</h2>
   <table id="packageTable">
     <thead>
       <tr>
@@ -169,6 +168,18 @@
         <td>1.1-1</td>
         <td>30.10.2025</td>
         <td>x86_64</td>
+      </tr>
+      <tr>
+        <td><a href="pixelid" download>pixelid</a></td>
+        <td>0.0.1</td>
+        <td>30.10.2025</td>
+        <td>x86_64</td>
+      </tr>
+      <tr>
+        <td><a href="pixelid32" download>pixelid32</a></td>
+        <td>0.0.1</td>
+        <td>30.10.2025</td>
+        <td>x86</td>
       </tr>
       <tr>
         <td><a href="repo" download>repo</a></td>
